@@ -17,7 +17,7 @@
   |          Dmitry Stogov <dmitry@zend.com>                             |
   +----------------------------------------------------------------------+
 */
-/* $Id: php_encoding.c,v 1.103.2.7 2005/10/09 11:05:46 dmitry Exp $ */
+/* $Id: php_encoding.c,v 1.103.2.8 2005/10/09 12:41:44 dmitry Exp $ */
 
 #include <time.h>
 
@@ -1380,7 +1380,7 @@ static int model_to_xml_object(xmlNodePtr node, sdlContentModelPtr model, zval *
 					}
 				}
 				return 1;
-			} else if (strict && model->u.element->nillable) {
+			} else if (strict && model->u.element->nillable && model->min_occurs > 0) {
 				property = xmlNewNode(NULL,model->u.element->name);
 				xmlAddChild(node, property);
 				if (style == SOAP_ENCODED) {
@@ -1388,6 +1388,12 @@ static int model_to_xml_object(xmlNodePtr node, sdlContentModelPtr model, zval *
 				} else {
 					xmlNsPtr xsi = encode_add_ns(property,XSI_NAMESPACE);
 					xmlSetNsProp(property, xsi, "nil", "true");
+				}
+				if (style == SOAP_LITERAL &&
+				    model->u.element->namens &&
+				    model->u.element->form == XSD_FORM_QUALIFIED) {
+					xmlNsPtr nsp = encode_add_ns(property, model->u.element->namens);
+					xmlSetNs(property, nsp);
 				}
 				return 1;
 			} else if (model->min_occurs == 0) {
